--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
                      <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
                      <p class="dateTime"> 22.07.2025 13:39</p>
                   </li>
+                  <li>
+                     <h2>Tytuł taska</h2>
+                     <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
+                     <p class="dateTime"> 22.07.2025 13:39</p>
+                  </li>
+                  <li>
+                     <h2>Tytuł taska</h2>
+                     <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
+                     <p class="dateTime"> 22.07.2025 13:39</p>
+                  </li>
                </ul>
             </div>
             <button class="addTask" id="addTask" title="addTask"></button>
