Refactor To Do App: Improve HTML structure, enhance CSS styling, and clean up JavaScript code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Document</title>
  </head>
  <body>
-    
     <h1>To Do App</h1>
     <div class="container" id="container">
         <div class="taskList" id="taskList">
@@ -23,9 +22,9 @@
                      <p class="dateTime"> 22.07.2025 13:39</p>
                   </li>
                   <li>
-                     <h2>Tytuł taska</h2>
-                     <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
-                     <p class="dateTime"> 22.07.2025 13:39</p>
+                     <h2 id="taskTitleH2">Tytuł taska</h2>
+                     <p id="description">opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
+                     <p class="dateTime" id="dateTime"> 22.07.2025 13:39</p>
                   </li>
                   <li>
                      <h2>Tytuł taska</h2>
@@ -39,8 +38,8 @@
         <div class="taskContent" id="taskContent">
             <h3>Tytuł taska</h3>
             <div class="taskContentContainer">
-               <h2>opis</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam repellat qui deleniti libero aliquam voluptas amet nesciunt at facere blanditiis voluptatum dolor dignissimos quos, vero quisquam velit distinctio quas.</p>
+               <h2 id="titleTaskDescription">opis</h2>
+               <p id="longDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam repellat qui deleniti libero aliquam voluptas amet nesciunt at facere blanditiis voluptatum dolor dignissimos quos, vero quisquam velit distinctio quas.</p>
             </div>
         </div>
     </div>
