Refactor To Do App: Implement task priority system with dynamic rendering and styling

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
             <h3>Lista zadań</h3>
             <div class="taskListContent">
                <ul id="taskUL">
-                  <li>
-                     <h2>Tytuł taska</h2>
-                     <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
-                     <p class="dateTime"> 22.07.2025 13:39</p>
+                  <li class="priorityContainer" id="liPriorityHigh">
+                     <ul id="priorityHigh">
+
+                     </ul>
                   </li>
-                  <li>
-                     <h2 id="taskTitleH2">Tytuł taska</h2>
-                     <p id="description">opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
-                     <p class="dateTime" id="dateTime"> 22.07.2025 13:39</p>
+                  <li class="priorityContainer" id="liPriorityMedium">
+                     <ul id="priorityMedium">
+
+                     </ul>
                   </li>
-                  <li>
-                     <h2>Tytuł taska</h2>
-                     <p>opis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem inventore mollitia beatae nemo error labore.</p>
-                     <p class="dateTime"> 22.07.2025 13:39</p>
+                  <li class="priorityContainer" id="liPriorityLow">
+                     <ul id="priorityLow">
+
+                     </ul>
                   </li>
                </ul>
             </div>
@@ -43,7 +43,6 @@
             </div>
         </div>
     </div>
-
     <script src="main.js"></script>
  </body>
  </html>
