Refactor To Do App: Update task management functions to improve minimize and delete task logic

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          </div>
       </div>      
    <template id="taskContentTemplate">
-      <div class="taskContent" id="taskContent">
+      <div class="taskContent">
          <h3>Zadanie
             <button class="deleteTask">X</button>
             <button class="minimizeTask">—</button> 
